--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "developpement de l'application fidbook dans le cadre du cnam",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
     "start:dev": "set NODE_ENV=development&&nodemon server.js",
     "debug": "ndb server.js",
